cmake_minimum_required(VERSION 3.10)
project(qtum)

set(CMAKE_CXX_STANDARD 11)

include_directories(src)
include_directories(src/bench)
include_directories(src/compat)
include_directories(src/consensus)
include_directories(src/crypto)
include_directories(src/crypto/ctaes)
include_directories(src/cryptopp)
include_directories(src/leveldb/db)
include_directories(src/leveldb/helpers/memenv)
include_directories(src/leveldb/include)
include_directories(src/leveldb/include/leveldb)
include_directories(src/leveldb/port)
include_directories(src/leveldb/port/win)
include_directories(src/leveldb/table)
include_directories(src/leveldb/util)
include_directories(src/policy)
include_directories(src/primitives)
include_directories(src/qt)
include_directories(src/qt/test)
include_directories(src/qtum)
include_directories(src/rpc)
include_directories(src/script)
include_directories(src/secp256k1/contrib)
include_directories(src/secp256k1/include)
include_directories(src/secp256k1/src)
include_directories(src/secp256k1/src/java)
include_directories(src/secp256k1/src/modules)
include_directories(src/secp256k1/src/modules/ecdh)
include_directories(src/secp256k1/src/modules/recovery)
include_directories(src/support)
include_directories(src/support/allocators)
include_directories(src/test)
include_directories(src/test/qtumtests)
include_directories(src/univalue/include)
include_directories(src/univalue/lib)
include_directories(src/wallet)
include_directories(src/wallet/test)
include_directories(src/zmq)

add_executable(qtum
        src/bench/base58.cpp
        src/bench/bench.cpp
        src/bench/bench.h
        src/bench/bench_bitcoin.cpp
        src/bench/ccoins_caching.cpp
        src/bench/checkblock.cpp
        src/bench/checkqueue.cpp
        src/bench/coin_selection.cpp
        src/bench/crypto_hash.cpp
        src/bench/Examples.cpp
        src/bench/lockedpool.cpp
        src/bench/mempool_eviction.cpp
        src/bench/perf.cpp
        src/bench/perf.h
        src/bench/rollingbloom.cpp
        src/bench/verify_script.cpp
        src/compat/byteswap.h
        src/compat/endian.h
        src/compat/glibc_compat.cpp
        src/compat/glibc_sanity.cpp
        src/compat/glibcxx_sanity.cpp
        src/compat/sanity.h
        src/compat/strnlen.cpp
        src/consensus/consensus.cpp
        src/consensus/consensus.h
        src/consensus/merkle.cpp
        src/consensus/merkle.h
        src/consensus/params.h
        src/consensus/validation.h
        src/crypto/ctaes/bench.c
        src/crypto/ctaes/ctaes.c
        src/crypto/ctaes/ctaes.h
        src/crypto/ctaes/test.c
        src/crypto/aes.cpp
        src/crypto/aes.h
        src/crypto/chacha20.cpp
        src/crypto/chacha20.h
        src/crypto/common.h
        src/crypto/hmac_sha256.cpp
        src/crypto/hmac_sha256.h
        src/crypto/hmac_sha512.cpp
        src/crypto/hmac_sha512.h
        src/crypto/ripemd160.cpp
        src/crypto/ripemd160.h
        src/crypto/sha1.cpp
        src/crypto/sha1.h
        src/crypto/sha256.cpp
        src/crypto/sha256.h
        src/crypto/sha512.cpp
        src/crypto/sha512.h
        src/cryptopp/TestScripts/cryptest-coverity.cpp
        src/cryptopp/3way.cpp
        src/cryptopp/3way.h
        src/cryptopp/adler32.cpp
        src/cryptopp/adler32.h
        src/cryptopp/aes.h
        src/cryptopp/algebra.cpp
        src/cryptopp/algebra.h
        src/cryptopp/algparam.cpp
        src/cryptopp/algparam.h
        src/cryptopp/arc4.cpp
        src/cryptopp/arc4.h
        src/cryptopp/argnames.h
        src/cryptopp/asn.cpp
        src/cryptopp/asn.h
        src/cryptopp/authenc.cpp
        src/cryptopp/authenc.h
        src/cryptopp/base32.cpp
        src/cryptopp/base32.h
        src/cryptopp/base64.cpp
        src/cryptopp/base64.h
        src/cryptopp/basecode.cpp
        src/cryptopp/basecode.h
        src/cryptopp/bench.h
        src/cryptopp/bench1.cpp
        src/cryptopp/bench2.cpp
        src/cryptopp/bfinit.cpp
        src/cryptopp/blake2.cpp
        src/cryptopp/blake2.h
        src/cryptopp/blowfish.cpp
        src/cryptopp/blowfish.h
        src/cryptopp/blumshub.cpp
        src/cryptopp/blumshub.h
        src/cryptopp/camellia.cpp
        src/cryptopp/camellia.h
        src/cryptopp/cast.cpp
        src/cryptopp/cast.h
        src/cryptopp/casts.cpp
        src/cryptopp/cbcmac.cpp
        src/cryptopp/cbcmac.h
        src/cryptopp/ccm.cpp
        src/cryptopp/ccm.h
        src/cryptopp/chacha.cpp
        src/cryptopp/chacha.h
        src/cryptopp/channels.cpp
        src/cryptopp/channels.h
        src/cryptopp/cmac.cpp
        src/cryptopp/cmac.h
        src/cryptopp/config.h
        src/cryptopp/cpu.cpp
        src/cryptopp/cpu.h
        src/cryptopp/crc.cpp
        src/cryptopp/crc.h
        src/cryptopp/cryptlib.cpp
        src/cryptopp/cryptlib.h
        src/cryptopp/datatest.cpp
        src/cryptopp/default.cpp
        src/cryptopp/default.h
        src/cryptopp/des.cpp
        src/cryptopp/des.h
        src/cryptopp/dessp.cpp
        src/cryptopp/dh.cpp
        src/cryptopp/dh.h
        src/cryptopp/dh2.cpp
        src/cryptopp/dh2.h
        src/cryptopp/dll.cpp
        src/cryptopp/dll.h
        src/cryptopp/dlltest.cpp
        src/cryptopp/dmac.h
        src/cryptopp/drbg.h
        src/cryptopp/dsa.cpp
        src/cryptopp/dsa.h
        src/cryptopp/eax.cpp
        src/cryptopp/eax.h
        src/cryptopp/ec2n.cpp
        src/cryptopp/ec2n.h
        src/cryptopp/eccrypto.cpp
        src/cryptopp/eccrypto.h
        src/cryptopp/ecp.cpp
        src/cryptopp/ecp.h
        src/cryptopp/ecpoint.h
        src/cryptopp/elgamal.cpp
        src/cryptopp/elgamal.h
        src/cryptopp/emsa2.cpp
        src/cryptopp/emsa2.h
        src/cryptopp/eprecomp.cpp
        src/cryptopp/eprecomp.h
        src/cryptopp/esign.cpp
        src/cryptopp/esign.h
        src/cryptopp/factory.h
        src/cryptopp/fhmqv.h
        src/cryptopp/files.cpp
        src/cryptopp/files.h
        src/cryptopp/filters.cpp
        src/cryptopp/filters.h
        src/cryptopp/fips140.cpp
        src/cryptopp/fips140.h
        src/cryptopp/fipsalgt.cpp
        src/cryptopp/fipstest.cpp
        src/cryptopp/fltrimpl.h
        src/cryptopp/gcm.cpp
        src/cryptopp/gcm.h
        src/cryptopp/gf256.cpp
        src/cryptopp/gf256.h
        src/cryptopp/gf2_32.cpp
        src/cryptopp/gf2_32.h
        src/cryptopp/gf2n.cpp
        src/cryptopp/gf2n.h
        src/cryptopp/gfpcrypt.cpp
        src/cryptopp/gfpcrypt.h
        src/cryptopp/gost.cpp
        src/cryptopp/gost.h
        src/cryptopp/gzip.cpp
        src/cryptopp/gzip.h
        src/cryptopp/hex.cpp
        src/cryptopp/hex.h
        src/cryptopp/hkdf.h
        src/cryptopp/hmac.cpp
        src/cryptopp/hmac.h
        src/cryptopp/hmqv.h
        src/cryptopp/hrtimer.cpp
        src/cryptopp/hrtimer.h
        src/cryptopp/ida.cpp
        src/cryptopp/ida.h
        src/cryptopp/idea.cpp
        src/cryptopp/idea.h
        src/cryptopp/integer.cpp
        src/cryptopp/integer.h
        src/cryptopp/iterhash.cpp
        src/cryptopp/iterhash.h
        src/cryptopp/keccak.cpp
        src/cryptopp/keccak.h
        src/cryptopp/lubyrack.h
        src/cryptopp/luc.cpp
        src/cryptopp/luc.h
        src/cryptopp/mars.cpp
        src/cryptopp/mars.h
        src/cryptopp/marss.cpp
        src/cryptopp/md2.cpp
        src/cryptopp/md2.h
        src/cryptopp/md4.cpp
        src/cryptopp/md4.h
        src/cryptopp/md5.cpp
        src/cryptopp/md5.h
        src/cryptopp/mdc.h
        src/cryptopp/mersenne.h
        src/cryptopp/misc.cpp
        src/cryptopp/misc.h
        src/cryptopp/modarith.h
        src/cryptopp/modes.cpp
        src/cryptopp/modes.h
        src/cryptopp/modexppc.h
        src/cryptopp/mqueue.cpp
        src/cryptopp/mqueue.h
        src/cryptopp/mqv.cpp
        src/cryptopp/mqv.h
        src/cryptopp/nbtheory.cpp
        src/cryptopp/nbtheory.h
        src/cryptopp/network.cpp
        src/cryptopp/network.h
        src/cryptopp/nr.h
        src/cryptopp/oaep.cpp
        src/cryptopp/oaep.h
        src/cryptopp/oids.h
        src/cryptopp/osrng.cpp
        src/cryptopp/osrng.h
        src/cryptopp/ossig.h
        src/cryptopp/panama.cpp
        src/cryptopp/panama.h
        src/cryptopp/pch.cpp
        src/cryptopp/pch.h
        src/cryptopp/pkcspad.cpp
        src/cryptopp/pkcspad.h
        src/cryptopp/poly1305.cpp
        src/cryptopp/poly1305.h
        src/cryptopp/polynomi.cpp
        src/cryptopp/polynomi.h
        src/cryptopp/pssr.cpp
        src/cryptopp/pssr.h
        src/cryptopp/pubkey.cpp
        src/cryptopp/pubkey.h
        src/cryptopp/pwdbased.h
        src/cryptopp/queue.cpp
        src/cryptopp/queue.h
        src/cryptopp/rabin.cpp
        src/cryptopp/rabin.h
        src/cryptopp/randpool.cpp
        src/cryptopp/randpool.h
        src/cryptopp/rc2.cpp
        src/cryptopp/rc2.h
        src/cryptopp/rc5.cpp
        src/cryptopp/rc5.h
        src/cryptopp/rc6.cpp
        src/cryptopp/rc6.h
        src/cryptopp/rdrand.cpp
        src/cryptopp/rdrand.h
        src/cryptopp/rdtables.cpp
        src/cryptopp/regtest.cpp
        src/cryptopp/resource.h
        src/cryptopp/rijndael.cpp
        src/cryptopp/rijndael.h
        src/cryptopp/ripemd.cpp
        src/cryptopp/ripemd.h
        src/cryptopp/rng.cpp
        src/cryptopp/rng.h
        src/cryptopp/rsa.cpp
        src/cryptopp/rsa.h
        src/cryptopp/rw.cpp
        src/cryptopp/rw.h
        src/cryptopp/safer.cpp
        src/cryptopp/safer.h
        src/cryptopp/salsa.cpp
        src/cryptopp/salsa.h
        src/cryptopp/seal.cpp
        src/cryptopp/seal.h
        src/cryptopp/secblock.h
        src/cryptopp/seckey.h
        src/cryptopp/seed.cpp
        src/cryptopp/seed.h
        src/cryptopp/serpent.cpp
        src/cryptopp/serpent.h
        src/cryptopp/serpentp.h
        src/cryptopp/sha.cpp
        src/cryptopp/sha.h
        src/cryptopp/sha3.cpp
        src/cryptopp/sha3.h
        src/cryptopp/shacal2.cpp
        src/cryptopp/shacal2.h
        src/cryptopp/shark.cpp
        src/cryptopp/shark.h
        src/cryptopp/sharkbox.cpp
        src/cryptopp/simple.cpp
        src/cryptopp/simple.h
        src/cryptopp/siphash.h
        src/cryptopp/skipjack.cpp
        src/cryptopp/skipjack.h
        src/cryptopp/smartptr.h
        src/cryptopp/socketft.cpp
        src/cryptopp/socketft.h
        src/cryptopp/sosemanuk.cpp
        src/cryptopp/sosemanuk.h
        src/cryptopp/square.cpp
        src/cryptopp/square.h
        src/cryptopp/squaretb.cpp
        src/cryptopp/stdcpp.h
        src/cryptopp/strciphr.cpp
        src/cryptopp/strciphr.h
        src/cryptopp/tea.cpp
        src/cryptopp/tea.h
        src/cryptopp/test.cpp
        src/cryptopp/tftables.cpp
        src/cryptopp/tiger.cpp
        src/cryptopp/tiger.h
        src/cryptopp/tigertab.cpp
        src/cryptopp/trap.h
        src/cryptopp/trdlocal.cpp
        src/cryptopp/trdlocal.h
        src/cryptopp/trunhash.h
        src/cryptopp/ttmac.cpp
        src/cryptopp/ttmac.h
        src/cryptopp/twofish.cpp
        src/cryptopp/twofish.h
        src/cryptopp/validat0.cpp
        src/cryptopp/validat1.cpp
        src/cryptopp/validat2.cpp
        src/cryptopp/validat3.cpp
        src/cryptopp/validate.h
        src/cryptopp/vmac.cpp
        src/cryptopp/vmac.h
        src/cryptopp/wait.cpp
        src/cryptopp/wait.h
        src/cryptopp/wake.cpp
        src/cryptopp/wake.h
        src/cryptopp/whrlpool.cpp
        src/cryptopp/whrlpool.h
        src/cryptopp/winpipes.cpp
        src/cryptopp/winpipes.h
        src/cryptopp/words.h
        src/cryptopp/xtr.cpp
        src/cryptopp/xtr.h
        src/cryptopp/xtrcrypt.cpp
        src/cryptopp/xtrcrypt.h
        src/cryptopp/zdeflate.cpp
        src/cryptopp/zdeflate.h
        src/cryptopp/zinflate.cpp
        src/cryptopp/zinflate.h
        src/cryptopp/zlib.cpp
        src/cryptopp/zlib.h
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/dumpfile.cc
        src/leveldb/db/fault_injection_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldbutil.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/recovery_test.cc
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/issues/issue200_test.cc
        src/leveldb/port/win/stdint.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_posix_sse.cc
        src/leveldb/port/port_win.cc
        src/leveldb/port/port_win.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_posix_test.cc
        src/leveldb/util/env_posix_test_helper.h
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/hash_test.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/policy/fees.cpp
        src/policy/fees.h
        src/policy/policy.cpp
        src/policy/policy.h
        src/policy/rbf.cpp
        src/policy/rbf.h
        src/primitives/block.cpp
        src/primitives/block.h
        src/primitives/transaction.cpp
        src/primitives/transaction.h
        src/qt/test/compattests.cpp
        src/qt/test/compattests.h
        src/qt/test/paymentrequestdata.h
        src/qt/test/paymentservertests.cpp
        src/qt/test/paymentservertests.h
        src/qt/test/rpcnestedtests.cpp
        src/qt/test/rpcnestedtests.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/abifunctionfield.cpp
        src/qt/abifunctionfield.h
        src/qt/abiparam.cpp
        src/qt/abiparam.h
        src/qt/abiparamitem.cpp
        src/qt/abiparamitem.h
        src/qt/abiparamsfield.cpp
        src/qt/abiparamsfield.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addressfield.cpp
        src/qt/addressfield.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/addtokenpage.cpp
        src/qt/addtokenpage.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bantablemodel.cpp
        src/qt/bantablemodel.h
        src/qt/bitcoin.cpp
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/callcontract.cpp
        src/qt/callcontract.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/contractabi.cpp
        src/qt/contractabi.h
        src/qt/contractbookpage.cpp
        src/qt/contractbookpage.h
        src/qt/contractresult.cpp
        src/qt/contractresult.h
        src/qt/contracttablemodel.cpp
        src/qt/contracttablemodel.h
        src/qt/createcontract.cpp
        src/qt/createcontract.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/editcontractinfodialog.cpp
        src/qt/editcontractinfodialog.h
        src/qt/eventlog.cpp
        src/qt/eventlog.h
        src/qt/execrpccommand.cpp
        src/qt/execrpccommand.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/intro.cpp
        src/qt/intro.h
        src/qt/macdockiconhandler.h
        src/qt/macdockiconhandler.mm
        src/qt/macnotificationhandler.h
        src/qt/macnotificationhandler.mm
        src/qt/modaloverlay.cpp
        src/qt/modaloverlay.h
        src/qt/navigationbar.cpp
        src/qt/navigationbar.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/openuridialog.cpp
        src/qt/openuridialog.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentrequestplus.cpp
        src/qt/paymentrequestplus.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/peertablemodel.cpp
        src/qt/peertablemodel.h
        src/qt/platformstyle.cpp
        src/qt/platformstyle.h
        src/qt/qrctoken.cpp
        src/qt/qrctoken.h
        src/qt/qtumversionchecker.cpp
        src/qt/qtumversionchecker.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvalidatedtextedit.cpp
        src/qt/qvalidatedtextedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/receivecoinsdialog.cpp
        src/qt/receivecoinsdialog.h
        src/qt/receiverequestdialog.cpp
        src/qt/receiverequestdialog.h
        src/qt/receivetokenpage.cpp
        src/qt/receivetokenpage.h
        src/qt/recentrequeststablemodel.cpp
        src/qt/recentrequeststablemodel.h
        src/qt/restoredialog.cpp
        src/qt/restoredialog.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/sendtocontract.cpp
        src/qt/sendtocontract.h
        src/qt/sendtokenpage.cpp
        src/qt/sendtokenpage.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/styleSheet.cpp
        src/qt/styleSheet.h
        src/qt/tabbarinfo.cpp
        src/qt/tabbarinfo.h
        src/qt/titlebar.cpp
        src/qt/titlebar.h
        src/qt/token.cpp
        src/qt/token.h
        src/qt/tokenamountfield.cpp
        src/qt/tokenamountfield.h
        src/qt/tokendescdialog.cpp
        src/qt/tokendescdialog.h
        src/qt/tokenfilterproxy.cpp
        src/qt/tokenfilterproxy.h
        src/qt/tokenitemmodel.cpp
        src/qt/tokenitemmodel.h
        src/qt/tokentransactiondesc.cpp
        src/qt/tokentransactiondesc.h
        src/qt/tokentransactionrecord.cpp
        src/qt/tokentransactionrecord.h
        src/qt/tokentransactiontablemodel.cpp
        src/qt/tokentransactiontablemodel.h
        src/qt/tokentransactionview.cpp
        src/qt/tokentransactionview.h
        src/qt/trafficgraphwidget.cpp
        src/qt/trafficgraphwidget.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/utilitydialog.cpp
        src/qt/utilitydialog.h
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletmodeltransaction.cpp
        src/qt/walletmodeltransaction.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/qt/winshutdownmonitor.cpp
        src/qt/winshutdownmonitor.h
        src/qtum/qtumDGP.cpp
        src/qtum/qtumDGP.h
        src/qtum/qtumstate.cpp
        src/qtum/qtumstate.h
        src/qtum/qtumtransaction.cpp
        src/qtum/qtumtransaction.h
        src/qtum/storageresults.cpp
        src/qtum/storageresults.h
        src/rpc/blockchain.cpp
        src/rpc/client.cpp
        src/rpc/client.h
        src/rpc/mining.cpp
        src/rpc/misc.cpp
        src/rpc/net.cpp
        src/rpc/protocol.cpp
        src/rpc/protocol.h
        src/rpc/rawtransaction.cpp
        src/rpc/register.h
        src/rpc/server.cpp
        src/rpc/server.h
        src/script/bitcoinconsensus.cpp
        src/script/bitcoinconsensus.h
        src/script/interpreter.cpp
        src/script/interpreter.h
        src/script/ismine.cpp
        src/script/ismine.h
        src/script/script.cpp
        src/script/script.h
        src/script/script_error.cpp
        src/script/script_error.h
        src/script/sigcache.cpp
        src/script/sigcache.h
        src/script/sign.cpp
        src/script/sign.h
        src/script/standard.cpp
        src/script/standard.h
        src/secp256k1/contrib/lax_der_parsing.c
        src/secp256k1/contrib/lax_der_parsing.h
        src/secp256k1/contrib/lax_der_privatekey_parsing.c
        src/secp256k1/contrib/lax_der_privatekey_parsing.h
        src/secp256k1/include/secp256k1.h
        src/secp256k1/include/secp256k1_ecdh.h
        src/secp256k1/include/secp256k1_recovery.h
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.c
        src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.h
        src/secp256k1/src/java/org_bitcoin_Secp256k1Context.c
        src/secp256k1/src/java/org_bitcoin_Secp256k1Context.h
        src/secp256k1/src/modules/ecdh/main_impl.h
        src/secp256k1/src/modules/ecdh/tests_impl.h
        src/secp256k1/src/modules/recovery/main_impl.h
        src/secp256k1/src/modules/recovery/tests_impl.h
        src/secp256k1/src/basic-config.h
        src/secp256k1/src/bench.h
        src/secp256k1/src/bench_ecdh.c
        src/secp256k1/src/bench_internal.c
        src/secp256k1/src/bench_recover.c
        src/secp256k1/src/bench_schnorr_verify.c
        src/secp256k1/src/bench_sign.c
        src/secp256k1/src/bench_verify.c
        src/secp256k1/src/ecdsa.h
        src/secp256k1/src/ecdsa_impl.h
        src/secp256k1/src/eckey.h
        src/secp256k1/src/eckey_impl.h
        src/secp256k1/src/ecmult.h
        src/secp256k1/src/ecmult_const.h
        src/secp256k1/src/ecmult_const_impl.h
        src/secp256k1/src/ecmult_gen.h
        src/secp256k1/src/ecmult_gen_impl.h
        src/secp256k1/src/ecmult_impl.h
        src/secp256k1/src/field.h
        src/secp256k1/src/field_10x26.h
        src/secp256k1/src/field_10x26_impl.h
        src/secp256k1/src/field_5x52.h
        src/secp256k1/src/field_5x52_asm_impl.h
        src/secp256k1/src/field_5x52_impl.h
        src/secp256k1/src/field_5x52_int128_impl.h
        src/secp256k1/src/field_impl.h
        src/secp256k1/src/gen_context.c
        src/secp256k1/src/group.h
        src/secp256k1/src/group_impl.h
        src/secp256k1/src/hash.h
        src/secp256k1/src/hash_impl.h
        src/secp256k1/src/num.h
        src/secp256k1/src/num_gmp.h
        src/secp256k1/src/num_gmp_impl.h
        src/secp256k1/src/num_impl.h
        src/secp256k1/src/scalar.h
        src/secp256k1/src/scalar_4x64.h
        src/secp256k1/src/scalar_4x64_impl.h
        src/secp256k1/src/scalar_8x32.h
        src/secp256k1/src/scalar_8x32_impl.h
        src/secp256k1/src/scalar_impl.h
        src/secp256k1/src/scalar_low.h
        src/secp256k1/src/scalar_low_impl.h
        src/secp256k1/src/secp256k1.c
        src/secp256k1/src/testrand.h
        src/secp256k1/src/testrand_impl.h
        src/secp256k1/src/tests.c
        src/secp256k1/src/tests_exhaustive.c
        src/secp256k1/src/util.h
        src/support/allocators/secure.h
        src/support/allocators/zeroafterfree.h
        src/support/cleanse.cpp
        src/support/cleanse.h
        src/support/events.h
        src/support/lockedpool.cpp
        src/support/lockedpool.h
        src/test/qtumtests/bytecodeexec_tests.cpp
        src/test/qtumtests/condensingtransaction_tests.cpp
        src/test/qtumtests/dgp_tests.cpp
        src/test/qtumtests/qtumtxconverter_tests.cpp
        src/test/qtumtests/test_utils.cpp
        src/test/qtumtests/test_utils.h
        src/test/addrman_tests.cpp
        src/test/allocator_tests.cpp
        src/test/amount_tests.cpp
        src/test/arith_uint256_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bip32_tests.cpp
        src/test/blockencodings_tests.cpp
        src/test/bloom_tests.cpp
        src/test/bswap_tests.cpp
        src/test/coins_tests.cpp
        src/test/compress_tests.cpp
        src/test/crypto_tests.cpp
        src/test/cuckoocache_tests.cpp
        src/test/dbwrapper_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/hash_tests.cpp
        src/test/key_tests.cpp
        src/test/limitedmap_tests.cpp
        src/test/main_tests.cpp
        src/test/mempool_tests.cpp
        src/test/merkle_tests.cpp
        src/test/miner_tests.cpp
        src/test/multisig_tests.cpp
        src/test/net_tests.cpp
        src/test/netbase_tests.cpp
        src/test/pmt_tests.cpp
        src/test/policyestimator_tests.cpp
        src/test/pow_tests.cpp
        src/test/prevector_tests.cpp
        src/test/raii_event_tests.cpp
        src/test/reverselock_tests.cpp
        src/test/rpc_tests.cpp
        src/test/sanity_tests.cpp
        src/test/scheduler_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/scriptnum10.h
        src/test/scriptnum_tests.cpp
        src/test/serialize_tests.cpp
        src/test/sighash_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/skiplist_tests.cpp
        src/test/streams_tests.cpp
        src/test/test_bitcoin.cpp
        src/test/test_bitcoin.h
        src/test/test_bitcoin_fuzzy.cpp
        src/test/test_random.h
        src/test/testutil.cpp
        src/test/testutil.h
        src/test/timedata_tests.cpp
        src/test/transaction_tests.cpp
        src/test/txvalidationcache_tests.cpp
        src/test/uint256_tests.cpp
        src/test/univalue_tests.cpp
        src/test/util_tests.cpp
        src/test/versionbits_tests.cpp
        src/univalue/gen/gen.cpp
        src/univalue/include/univalue.h
        src/univalue/lib/univalue.cpp
        src/univalue/lib/univalue_escapes.h
        src/univalue/lib/univalue_read.cpp
        src/univalue/lib/univalue_utffilter.h
        src/univalue/lib/univalue_write.cpp
        src/univalue/test/unitester.cpp
        src/wallet/test/accounting_tests.cpp
        src/wallet/test/crypto_tests.cpp
        src/wallet/test/wallet_test_fixture.cpp
        src/wallet/test/wallet_test_fixture.h
        src/wallet/test/wallet_tests.cpp
        src/wallet/coincontrol.h
        src/wallet/crypter.cpp
        src/wallet/crypter.h
        src/wallet/db.cpp
        src/wallet/db.h
        src/wallet/rpcdump.cpp
        src/wallet/rpcwallet.cpp
        src/wallet/rpcwallet.h
        src/wallet/wallet.cpp
        src/wallet/wallet.h
        src/wallet/walletdb.cpp
        src/wallet/walletdb.h
        src/zmq/zmqabstractnotifier.cpp
        src/zmq/zmqabstractnotifier.h
        src/zmq/zmqconfig.h
        src/zmq/zmqnotificationinterface.cpp
        src/zmq/zmqnotificationinterface.h
        src/zmq/zmqpublishnotifier.cpp
        src/zmq/zmqpublishnotifier.h
        src/addrdb.cpp
        src/addrdb.h
        src/addrman.cpp
        src/addrman.h
        src/amount.cpp
        src/amount.h
        src/arith_uint256.cpp
        src/arith_uint256.h
        src/base58.cpp
        src/base58.h
        src/bitcoin-cli.cpp
        src/bitcoin-tx.cpp
        src/bitcoind.cpp
        src/blockencodings.cpp
        src/blockencodings.h
        src/bloom.cpp
        src/bloom.h
        src/chain.cpp
        src/chain.h
        src/chainparams.cpp
        src/chainparams.h
        src/chainparamsbase.cpp
        src/chainparamsbase.h
        src/chainparamsseeds.h
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.cpp
        src/clientversion.h
        src/coins.cpp
        src/coins.h
        src/compat.h
        src/compressor.cpp
        src/compressor.h
        src/core_io.h
        src/core_memusage.h
        src/core_read.cpp
        src/core_write.cpp
        src/cuckoocache.h
        src/dbwrapper.cpp
        src/dbwrapper.h
        src/hash.cpp
        src/hash.h
        src/httprpc.cpp
        src/httprpc.h
        src/httpserver.cpp
        src/httpserver.h
        src/indirectmap.h
        src/init.cpp
        src/init.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/limitedmap.h
        src/memusage.h
        src/merkleblock.cpp
        src/merkleblock.h
        src/miner.cpp
        src/miner.h
        src/net.cpp
        src/net.h
        src/net_processing.cpp
        src/net_processing.h
        src/netaddress.cpp
        src/netaddress.h
        src/netbase.cpp
        src/netbase.h
        src/netmessagemaker.h
        src/noui.cpp
        src/noui.h
        src/pos.cpp
        src/pos.h
        src/pow.cpp
        src/pow.h
        src/prevector.h
        src/protocol.cpp
        src/protocol.h
        src/pubkey.cpp
        src/pubkey.h
        src/random.cpp
        src/random.h
        src/rest.cpp
        src/reverselock.h
        src/scheduler.cpp
        src/scheduler.h
        src/serialize.h
        src/streams.h
        src/sync.cpp
        src/sync.h
        src/threadinterrupt.cpp
        src/threadinterrupt.h
        src/threadsafety.h
        src/timedata.cpp
        src/timedata.h
        src/tinyformat.h
        src/torcontrol.cpp
        src/torcontrol.h
        src/txdb.cpp
        src/txdb.h
        src/txmempool.cpp
        src/txmempool.h
        src/ui_interface.cpp
        src/ui_interface.h
        src/uint256.cpp
        src/uint256.h
        src/undo.h
        src/util.cpp
        src/util.h
        src/utilmoneystr.cpp
        src/utilmoneystr.h
        src/utilstrencodings.cpp
        src/utilstrencodings.h
        src/utiltime.cpp
        src/utiltime.h
        src/validation.cpp
        src/validation.h
        src/validationinterface.cpp
        src/validationinterface.h
        src/version.h
        src/versionbits.cpp
        src/versionbits.h
        src/warnings.cpp
        src/warnings.h)
